sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:18: error: ')' expected but '}' found.
		} else
                ^